--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+# Dependências principais do Django
 Django==4.2.25
 djangorestframework==3.16.1
-pillow==11.3.0
-sqlparse==0.5.3
-asgiref==3.10.0
-gunicorn==21.2.0
+django-filter==25.1
+Pillow==11.3.0
 
+# Utilitários
+asgiref==3.10.0
+sqlparse==0.5.3
+tzdata==2025.2
+python-decouple==3.10
+
+# Produção (Render/Heroku style)
+gunicorn
+whitenoise==6.5.0
+psycopg2-binary
+dj-database-url
