--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.25
 djangorestframework==3.16.1
 django-filter==25.1
 Pillow==11.3.0
+django-filter==25.1
 
 # Utilitários
 asgiref==3.10.0
